force-app/src/objects/c2g__codaIntercompanyDefinition__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpintercompanydefinition</customHelpPage>
    <description>Defines the intercompany control accounts that you want to use when generating and posting  intercompany journals.</description>
    <fields>
        <fullName>c2g__AutoPost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AutoProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ChargeIntercompanyTax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, this allows Intercompany Tax charges when posting and generating documents between source and destination companies.</description>
        <inlineHelpText>If selected, this allows Intercompany Tax charges when posting and generating documents between source and destination companies.</inlineHelpText>
        <label>Charge Intercompany Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Dimension 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension1__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Destination Dimension 1)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Dimension 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension2__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Destination Dimension 2)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Dimension 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension3__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Destination Dimension 3)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDocumentBankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Document Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Intercompany Definitions</relationshipLabel>
        <relationshipName>IntercompanyDefinitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Intercompany Definitions</relationshipLabel>
        <relationshipName>IntercompanyDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ReceivingControlAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounts Payable GLA</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Accounts Payable GLA)</relationshipLabel>
        <relationshipName>Intercompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__RelatedCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Related Company)</relationshipLabel>
        <relationshipName>IntercompanyDefinitionsRelatedCompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SendingControlAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounts Receivable GLA</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Accounts Receivable GLA)</relationshipLabel>
        <relationshipName>Intercompany1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Dimension 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension1__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Source Dimension 1)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Dimension 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension2__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Source Dimension 2)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Dimension 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension3__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Intercompany Definitions (Source Dimension 3)</relationshipLabel>
        <relationshipName>IntercompanyDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Intercompany Definition</label>
    <listViews>
        <fullName>FF_Council_of_International_Schools_Inc_codaIntercompanyDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools, Inc</label>
        <queue>FF_Council_of_International_Schools_Inc</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Council_of_International_Schools_codaIntercompanyDefinition</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools</label>
        <queue>FF_Council_of_International_Schools</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <columns>c2g__RelatedCompany__c</columns>
        <columns>c2g__ReceivingControlAccount__c</columns>
        <columns>c2g__SendingControlAccount__c</columns>
        <columns>c2g__AutoProcess__c</columns>
        <columns>c2g__AutoPost__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ICD{000000}</displayFormat>
        <label>Intercompany Definition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intercompany Definitions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>